--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -3,7 +3,7 @@
 
     <% if @task.kind == "single" %>
         <div class="options">
-            <% @task.options.split(/\s*,\s*/).each_with_index do |o, i| %>
+            <% @task.options_arr.each_with_index do |o, i| %>
                 <label><input type='radio' name='answer_value' value='<%= i + 1 %>' /><%= o %></label>
             <% end %>
         </div>
@@ -12,7 +12,7 @@
         <%= @task.question %>
         <div>Choose all that applies.</div>
         <div class="options">
-            <% options = @task.options.split(/\s*,\s*/) %>
+            <% options = @task.options_arr %>
             <input type="hidden" name="multiple" value="<%= options.length %>" />
             <% options.each_with_index do |o, i| %>
                 <label><input type='checkbox' name='answer_values[]' value='<%= i + 1 %>' /><%= o %></label>
