--- a/app/assets/stylesheets/components/_articles.scss
+++ b/app/assets/stylesheets/components/_articles.scss
@@ -86,7 +86,11 @@
             font-size: 85%;
             padding: .5rem 1rem;
         }
-
+        #highlightContainer {
+            padding-top: 1rem;
+            margin-top: 1.5rem;
+            border-top: 1px solid lighten($brand-color-light, 10%);
+        }
         li {
             display: block;
             position: relative;
