--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <nav class="bar">
+    <nav class="bar noselect">
     
     <% if !@direction.nil? %>
       <b><%= @direction %></b>
