--- a/app/views/articles/_survey_form.html.erb
+++ b/app/views/articles/_survey_form.html.erb
@@ -12,7 +12,7 @@
         </div>
         <div class="action">
             <input type="hidden" name="time" value="0" />
-            <%= submit_tag("Submit", :class => "btn") %>
+            <%= submit_tag("Next", :class => "btn") %>
         </div>
 
 <% end %>
