--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,14 +11,14 @@
     </div>
 </section>
 
-<section class="sidebar">
+<section class="sidebar noselect">
 
     <div class="task">
         <ul class="collapsible">
             <%= render partial: "task" %>
         </ul>
- 
     </div>
+    
 
 </section>
 
