--- a/app/assets/stylesheets/components/_base.scss
+++ b/app/assets/stylesheets/components/_base.scss
@@ -310,6 +310,10 @@ button, .btn {
   .blue {
       color: $link-color;
   }
+
+  .yellow {
+    color: #FFEB3B;
+  }
   
   .svg-icon {
     width: 16px;
