--- a/app/views/articles/_task.html.erb
+++ b/app/views/articles/_task.html.erb
@@ -1,6 +1,6 @@
     <div>
     You've answered 
-    <strong><%= Answer.where(user_id: current_user.id).length %></strong>
+    <strong><%= Answer.answers_by(current_user.id).length %></strong>
     questions!
     </div>
 
