--- a/app/views/articles/create_answer.js.erb
+++ b/app/views/articles/create_answer.js.erb
@@ -15,6 +15,8 @@
         scrollTop: $("#highlightContainer").offset().top
     }, 2000);
 
+    $(".startHighlight").click();
+
 <% else %>
     $(".collapsible").html("<%= escape_javascript(render(:partial => 'task', locals: {answer: @answer}))%>");
     swal("Thank you", "Successfully saved!", "success");
