--- a/app/views/articles/_task.html.erb
+++ b/app/views/articles/_task.html.erb
@@ -5,7 +5,7 @@
     </div>
 
     <li class="<%= @task.kind %>">
-        <div class="collapsible-header">
+        <div class="collapsible-header noclick">
             <b><%= @task.question %></b>
             <i class="material-icons">keyboard_arrow_down</i>
         </div>
