--- a/app/views/application/export.html.erb
+++ b/app/views/application/export.html.erb
@@ -1,17 +1,14 @@
 <p>
   Log:
   <%= link_to "CSV", logs_path(format: "csv") %> |
-  <%= link_to "Excel", logs_path(format: "xls") %>
 </p>
 
 <p>
   Answers:
   <%= link_to "CSV", answers_path(format: "csv") %> |
-  <%= link_to "Excel", answers_path(format: "xls") %>
 </p>
 
 <p>
   Tasks:
-  <%= link_to "CSV", logs_path(format: "csv") %> |
-  <%= link_to "Excel", logs_path(format: "xls") %>
+  <%= link_to "CSV", tasks_path(format: "csv") %> |
 </p>
