--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,9 @@
  }
 
  .full-height {
-    height: 100vh;
+    height: calc( 100vh - 60px);
+    overflow: scroll;
+    position: relative;
  }
  
  .flex-column {
