--- a/app/views/application/export.html.erb
+++ b/app/views/application/export.html.erb
@@ -12,3 +12,8 @@
   Tasks:
   <%= link_to "CSV", tasks_path(format: "csv") %> |
 </p>
+
+<p>
+  Survey Answers:
+  <%= link_to "CSV", survey_answers_path(format: "csv") %> |
+</p>
