--- a/app/views/articles/_edit_form.html.erb
+++ b/app/views/articles/_edit_form.html.erb
@@ -26,6 +26,10 @@
                 <% else %>
                     <label><input type='checkbox' name='answer_values[]' value='<%= i + 1 %>' /><%= o %></label>
                 <% end %>
+                
+                <% if o.include?("Other") %>
+                     <input class="col-9 mb-1" type="text" name="other" placeholder="If you selected 'Others' please write it here" />
+                <% end %>
 
             <% end %>
         </div>
