--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,6 +15,9 @@
             <input type="hidden" name="multiple" value="<%= options.length %>" />
             <% options.each_with_index do |o, i| %>
                 <label><input type='checkbox' name='answer_values[]' value='<%= i + 1 %>' /><%= o %></label>
+                <% if o.include?("Other") %>
+                     <input class="col-9 mb-1" type="text" name="other" placeholder="If you selected 'Others' please write it here" />
+                <% end %>
             <% end %>
         </div>
 
