--- a/app/views/articles/create_highlight.js.erb
+++ b/app/views/articles/create_highlight.js.erb
@@ -1,5 +1,9 @@
-$(".collapsible").html("<%= escape_javascript(render(:partial => 'task', locals: {answer: @answer}))%>");
 swal("Thank you", "Successfully saved!", "success");
-instance.open(0);
 article = document.querySelector(".article");
 article.innerHTML = article.innerHTML.replace(/\n|<mark.*?>/g,'');
+
+
+<% if (@answer.value_array.length * 3 >= @answer.highlights_arr.length) %>
+    $(".collapsible").html("<%= escape_javascript(render(:partial => 'task', locals: {answer: @answer}))%>");
+    instance.open(0);
+<% end %>
