--- a/app/views/articles/_annotate.html.erb
+++ b/app/views/articles/_annotate.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag("/create_highlight/#{answer.id}", method: "post", remote: true) do %>
     <input type="hidden" name="task_id" value="<%= current_task.id %>">
-
+    Why did you chose no. <%= answer.value_array[index - 1] %> as an answer?<br>
     Please highlight the relevant part of article.
     <div id="pleasehighlight" class="action">
         <input type="hidden" name="answer_value"/>
