--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <% end %>
 
     <% if !@show_next.nil? %>
-      <a id="nextBtn" class="btn col-2 text-center" href="/articles/1/survey"><b>Go to Survey and Finish</b></a>
+      <a id="nextBtn" class="btn col-2 text-center" href="/articles/1/finish"><b>Finish Task</b></a>
     <% end %>
 
     </nav>
