--- a/app/views/articles/_task.html.erb
+++ b/app/views/articles/_task.html.erb
@@ -20,13 +20,17 @@
                 <div id="formContainer">
                     <%= render partial: "edit_form", locals: {answer: answer} %>
                 </div>
+
+                <div id="highlightContainer">
                 <% answer.value_array.each_with_index do |v, i| %>
-                    <% if @task.highlights_arr.include?(v) %>
-                        <div id="highlightContainer">
+                    <% if !@task.highlights_arr.include?(v) %>
+                        <div class="highlightContainer">
                             <%= render partial: "annotate", locals: {answer: answer, index: i} %>
                         </div>
                     <% end %>
                 <% end %>
+                </div>
+
             <% end %>
         </div>
     </li>
