--- a/app/views/application/finish.html.erb
+++ b/app/views/application/finish.html.erb
@@ -1,5 +1,6 @@
 <div class="full-height flex-column center col-12">
-    <% if (Answer.answers_by(current_user.id).length < 1) %>
+    <% finished = Answer.answers_by(current_user.id).length %>
+    <% if (finished < 1) %>
         It seems you did not answer at least 1 question in Section 2.<br>
         <a href="/articles/1">Go back to Section 2 </a>
     <% elsif (!Surveyanswer.done?(current_user.id)) %>
@@ -7,6 +8,7 @@
         <a href="/articles/1/survey">Go back to Section 1 </a>
     <% else %>
         <h1>Finished!</h1>
+        <p>Your payment will be $1 + <%= finished %> questions * $0.1 = <strong>$<%= (1 + 0.1 * finished).round(3) %></strong> in total.</p>
         <p>Go back to the mTurk page and submit this token: <b>asqjogenml2m1qfsdb</b></p>
     <% end %>
 </div>
