--- a/app/views/articles/skip_answer.js.erb
+++ b/app/views/articles/skip_answer.js.erb
@@ -1,3 +1,3 @@
 $(".collapsible").html("<%= escape_javascript(render(:partial => 'task', locals: {answer: @answer}))%>");
-swal("Complete", "Successfully skipped!", "success");
+swal("Skipped", "Successfully skipped!", "success");
 instance.open(0);
