--- a/app/views/application/finish.html.erb
+++ b/app/views/application/finish.html.erb
@@ -7,8 +7,8 @@
         It seems you did not answer all survey questions in Section 1.<br>
         <a href="/articles/1/survey">Go back to Section 1 </a>
     <% else %>
-        <h1>Finished!</h1>
-        <p>Your payment will be $1 + <%= finished %> questions * $0.1 = <strong>$<%= (1 + 0.1 * finished).round(3) %></strong> in total.</p>
+        <h1>Thank you! All finished!</h1>
+        <!-- <p>Your payment will be $1 + <%= finished %> questions * $0.1 = <strong>$<%= (1 + 0.1 * finished).round(3) %></strong> in total.</p> -->
         <p>Go back to the mTurk page and submit this token: <b>asqjogenml2m1qfsdb</b></p>
     <% end %>
 </div>
