--- a/app/views/articles/_task.html.erb
+++ b/app/views/articles/_task.html.erb
@@ -7,7 +7,7 @@
     <li class="<%= @task.kind %>">
         <div class="collapsible-header noclick">
             <b><%= @task.question %></b>
-            <i class="material-icons">keyboard_arrow_down</i>
+            <!-- <i class="material-icons">keyboard_arrow_down</i> -->
         </div>
         <div id="task-<%= @task.id %>" class="collapsible-body">
             <% answer = Answer.find_by(user_id: current_user.id, task_id: @task.id) %>
@@ -25,7 +25,7 @@
                 <% answer.value_array.each_with_index do |v, i| %>
                     <% if !@task.highlights_arr.include?(v) %>
                         <div class="highlightContainer">
-                            <%= render partial: "annotate", locals: {answer: answer, index: i} %>
+                            <%= render partial: "annotate", locals: {answer: answer, index: i + 1} %>
                         </div>
                     <% end %>
                 <% end %>
